tests/ui/sculpt_invalid_attr.stderr
error: unknown typeshaper option `typo`; expected `#[typeshaper]` or `#[typeshaper(export)]`
 --> tests/ui/sculpt_invalid_attr.rs:4:14
  |
4 | #[typeshaper(typo)]
  |              ^^^^
